Fix no padding on mobile phone

--- a/bootstrap-3.3.2/css/bootstrap.css
+++ b/bootstrap-3.3.2/css/bootstrap.css
@@ -1579,14 +1579,16 @@ pre code {
 .container {
   margin-right: auto;
   margin-left: auto;
+  padding: 15px;
 }
 @media (min-width: 768px) {
 
 }
 
 @media (min-width: 992px) {
-  .container {
+.container {
     width: 960px;
+    padding: 15px;
   }
 }
 .container-fluid {
